--- a/.default.config.yml
+++ b/.default.config.yml
@@ -89,7 +89,8 @@ homebrew_installed_packages:
   - pwgen
   - watch
   - gnu-sed
-  - k2tf
+  - jq
+  - nmap
   #- dockutil #commented out until v3 is available via brew
 
 homebrew_taps:
@@ -110,6 +111,7 @@ homebrew_cask_apps:
   - telegram-desktop
   - spotify
   - zoom
+  - rclone
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
@@ -118,6 +120,7 @@ mas_installed_apps:
   - { id: 409201541, name: "Pages" }
   - { id: 409203825, name: "Numbers" }
   - { id: 409183694, name: "Keynote" }
+  - { id: 1451685025, name: "WireGuard" }
 mas_email: ""
 mas_password: ""
 
