--- a/.default.config.yml
+++ b/.default.config.yml
@@ -95,6 +95,7 @@ homebrew_installed_packages:
   - jq
   - nmap
   - rclone
+  - pidof
   #- dockutil #commented out until v3 is available via brew
 
 homebrew_taps:
