--- a/.default.config.yml
+++ b/.default.config.yml
@@ -35,8 +35,8 @@ dockitems_persist:
   - name: "Terminal"
     path: "/System/Applications/Utilities/Terminal.app/"
     pos: 6
-  - name: "Atom"
-    path: "/Applications/Atom.app/"
+  - name: "VSCodium"
+    path: "/Applications/VSCodium.app/"
     pos: 7
   - name: "Joplin"
     path: "/Applications/Joplin.app/"
@@ -96,6 +96,7 @@ homebrew_installed_packages:
   - nmap
   - rclone
   - pidof
+  - k9s
   #- dockutil #commented out until v3 is available via brew
 
 homebrew_taps:
@@ -116,6 +117,7 @@ homebrew_cask_apps:
   - telegram-desktop
   - spotify
   - zoom
+  - vscodium
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
