--- a/.default.config.yml
+++ b/.default.config.yml
@@ -118,6 +118,7 @@ homebrew_cask_apps:
   - spotify
   - zoom
   - vscodium
+  - qrencode
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
