--- a/.default.config.yml
+++ b/.default.config.yml
@@ -10,6 +10,7 @@ configure_dock: true
 dockitems_remove:
   - Safari
   - Launchpad
+  - Mail
   - TV
   - Podcasts
   - 'App Store'
@@ -21,7 +22,11 @@ dockitems_remove:
   - Reminders
   - Notes
   - Music
-  - 'System Preferences'
+  - 'System Settings'
+  - Keynote
+  - Numbers
+  - Pages
+  - 'App Store'
 dockitems_persist:
   - name: "Thunderbird"
     path: "/Applications/Thunderbird.app/"
@@ -47,15 +52,12 @@ dockitems_persist:
   - name: "KeePassXC"
     path: "/Applications/KeePassXC.app/"
     pos: 10
-  - name: "TextEdit"
-    path: "/System/Applications/Utilities/TextEdit.app/"
-    pos: 11
   - name: "Signal"
     path: "/Applications/Signal.app/"
-    pos: 12
+    pos: 11
   - name: "Telegram Desktop"
     path: "/Applications/Telegram Desktop.app/"
-    pos: 10
+    pos: 12
 
 configure_sudoers: false
 sudoers_custom_config: ''
@@ -94,7 +96,8 @@ homebrew_installed_packages:
   - rclone
   - pidof
   - k9s
-  - dockutil #commented out until v3 is available via brew
+  - dockutil
+  - qrencode
 
 homebrew_taps:
   - homebrew/core
@@ -110,7 +113,8 @@ homebrew_cask_apps:
   - telegram-desktop
   - spotify
   - vscodium
-  - qrencode
+  - thunderbird
+  - keepassxc
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
