--- a/.default.config.yml
+++ b/.default.config.yml
@@ -58,6 +58,9 @@ dockitems_persist:
   - name: "Telegram Desktop"
     path: "/Applications/Telegram Desktop.app/"
     pos: 12
+  - name: "TextEdit"
+    path: "/System/Applications/TextEdit.app/"
+    pos: 13
 
 configure_sudoers: false
 sudoers_custom_config: ''
