--- a/.default.config.yml
+++ b/.default.config.yml
@@ -142,10 +142,9 @@ npm_packages: []
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
-pip_packages: []
-# - name: mkdocs
-#   state: present # present/absent/latest, default: present
-#   version: "0.16.3" # default: N/A
+pip_packages:
+  - name: netaddr
+    state: present
 
 # Set to 'true' to configure Sublime Text.
 configure_sublime: false
