--- a/.default.config.yml
+++ b/.default.config.yml
@@ -131,6 +131,7 @@ homebrew_cask_apps:
   - font-code-new-roman-nerd-font
   - alacritty
   - rectangle
+  - libreoffice
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
