--- a/.default.config.yml
+++ b/.default.config.yml
@@ -8,6 +8,7 @@ configure_osx: true
 # Set to 'true' to configure the Dock via dockutil.
 configure_dock: true
 dockitems_remove:
+  - Safari
   - Launchpad
   - Mail
   - TV
@@ -21,38 +22,57 @@ dockitems_remove:
   - Reminders
   - Notes
   - Music
-  - 'System Preferences'
+  - 'System Settings'
+  - Keynote
+  - Numbers
+  - Pages
+  - 'App Store'
 dockitems_persist:
+  - name: "Thunderbird"
+    path: "/Applications/Thunderbird.app/"
+    pos: 3
   - name: "Firefox"
     path: "/Applications/Firefox.app/"
-    pos: 3
+    pos: 4
   - name: "Google Chrome"
     path: "/Applications/Google Chrome.app/"
-    pos: 4
-  - name: "Terminal"
-    path: "/System/Applications/Utilities/Terminal.app/"
     pos: 5
-  - name: "Atom"
-    path: "/Applications/Atom.app/"
+  - name: "iTerm2"
+    path: "/System/Applications/iTerm2.app/"
     pos: 6
-  - name: "Joplin"
-    path: "/Applications/Joplin.app/"
+  - name: "VSCodium"
+    path: "/Applications/VSCodium.app/"
     pos: 7
-  - name: "Strongbox"
-    path: "/Applications/Strongbox.app/"
+  - name: "Notes"
+    path: "/Applications/Notes.app/"
     pos: 8
+  - name: "Reminders"
+    path: "/Applications/Reminders.app/"
+    pos: 9
   - name: "Spotify"
     path: "/Applications/Spotify.app/"
-    pos: 9
-  - name: "Microsoft Remote Desktop"
-    path: "/Applications/Microsoft Remote Desktop.app/"
     pos: 10
-  - name: "zoom.us"
-    path: "/Applications/zoom.us.app/"
+  - name: "KeePassXC"
+    path: "/Applications/KeePassXC.app/"
     pos: 11
-  - name: "Nextcloud"
-    path: "/Applications/Nextcloud.app/"
+  - name: "Signal"
+    path: "/Applications/Signal.app/"
     pos: 12
+  - name: "Telegram Desktop"
+    path: "/Applications/Telegram Desktop.app/"
+    pos: 13
+  - name: "TextEdit"
+    path: "/System/Applications/TextEdit.app/"
+    pos: 14
+  - name: "LibreOffice"
+    path: "/Applications/LibreOffice.app/"
+    pos: 15
+  - name: "Calendar"
+    path: "/Applications/Calendar.app/"
+    pos: 16
+  - name: "Contacts"
+    path: "/Applications/Contacts.app/"
+    pos: 17
 
 configure_sudoers: false
 sudoers_custom_config: ''
@@ -72,17 +92,14 @@ dotfiles_files:
   - .osx
 
 homebrew_installed_packages:
-  - git
   - ssh-copy-id
   - wget
   - terraform
-  - packer
   - fzf
   - Kubernetes-cli
   - curl
   - telnet
   - awscli
-  - azure-cli
   - tmux
   - krew
   - helm
@@ -92,36 +109,38 @@ homebrew_installed_packages:
   - jq
   - nmap
   - rclone
-  - go
-  #- dockutil #commented out until v3 is available via brew
+  - pidof
+  - k9s
+  - dockutil
+  - qrencode
+  - bat
+  - exa
+  - dust
+  - ripgrep
+  - procs
+  - fd
+  - sd
+  - starship
+  - gpg
+  - s3cmd
 
 homebrew_taps:
   - homebrew/core
   - homebrew/cask
+  - homebrew/cask-fonts
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - docker
   - firefox
   - google-chrome
-  - vagrant
-  - atom
-  - tunnelblick
-  - signal
-  - joplin
-  - nextcloud
-  - telegram-desktop
   - spotify
-  - zoom
+  - vscodium
+  - font-code-new-roman-nerd-font
+  - iterm2
+  - rectangle
 
 # See `geerlingguy.mas` role documentation for usage instructions.
-mas_installed_apps:
-  - { id: 1270075435, name: "Strongbox" }
-  - { id: 1295203466, name: "Microsoft Remote Desktop" }
-  - { id: 409201541, name: "Pages" }
-  - { id: 409203825, name: "Numbers" }
-  - { id: 409183694, name: "Keynote" }
-  - { id: 1451685025, name: "WireGuard" }
+mas_installed_apps: ""
 mas_email: ""
 mas_password: ""
 
