--- a/.default.config.yml
+++ b/.default.config.yml
@@ -81,7 +81,7 @@ sudoers_custom_config: ''
 #   # Allow users in admin group to use sudo with no password.
 #   %admin ALL=(ALL) NOPASSWD: ALL
 
-dotfiles_repo: https://github.com/Furragen/dotfiles.git
+dotfiles_repo: https://github.com/axkng/dotfiles.git
 dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/git/dev/dotfiles
 dotfiles_repo_version: work
