--- a/.default.config.yml
+++ b/.default.config.yml
@@ -145,6 +145,8 @@ homebrew_cask_apps:
   - rectangle
   - libreoffice
   - balenaetcher
+  - teamviewer
+  - teamspeak-client
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
