--- a/.default.config.yml
+++ b/.default.config.yml
@@ -153,6 +153,7 @@ homebrew_cask_apps:
   - balenaetcher
   - teamviewer
   - via
+  - raspberry-pi-imager
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
