--- a/.default.config.yml
+++ b/.default.config.yml
@@ -154,6 +154,7 @@ homebrew_cask_apps:
   - teamviewer
   - via
   - raspberry-pi-imager
+  - logitech-g-hub
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
